Estructura inicial css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,51 +8,71 @@
     <link rel="stylesheet" href="style.css">
     <title>Flexbox</title>
 </head>
+
 <body>
-    <header>
+    <header id="header_container">
         <h1>Mi primer pagina con flexbox</h1>
         <nav>
             <ul>
                 <li>
-                    Inicio              
+                    Inicio
                 </li>
                 <li>
-                    Contacto               
+                    Contacto
                 </li>
                 <li>
-                    Servicios           
+                    Servicios
                 </li>
             </ul>
         </nav>
     </header>
-    <main id="conteiner"> 
-        <div> 
-            <article>
-                <p> 
+    <main id="container_main">
+        <div>
+            <article id="article 1">
+                <p>
+
+                    What is Lorem Ipsum?
+
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
+                    leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s
+                    with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
+                    publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 
                 </p>
             </article>
-            <article>
-                <p> 
-                    
+            <article id="article 2">
+                <p>
+
+                    What is Lorem Ipsum?
+
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
+                    leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s
+                    with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
+                    publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+
                 </p>
             </article>
         </div>
-        <aside> 
-            <lu>
-                <li> 
+        <aside id="sidebar">
+            <ul>
+                <li>
                     LinkedIn
                 </li>
-                <li> 
+                <li>
                     Twitter
                 </li>
-                <li> 
+                <li>
                     Facebook
                 </li>
-            </lu>
+            </ul>
         </aside>
     </main>
     <footer>
-        
+        <p> &copy by Nestor Ramirez Kodemia</p>
     </footer>
+
 </html>
