dando estilo a la pagina

--- a/index.html
+++ b/index.html
@@ -11,23 +11,26 @@
 
 <body>
     <header id="header_container">
-        <h1>Mi primer pagina con flexbox</h1>
-        <nav>
-            <ul>
-                <li>
-                    Inicio
-                </li>
-                <li>
-                    Contacto
-                </li>
-                <li>
-                    Servicios
-                </li>
-            </ul>
-        </nav>
+        <div>
+            <h1>Mi primer pagina con flexbox</h1>
+        </div>
+        <div><nav id="menu">
+            
+                <span>
+                    <a href="#">Inicio</a>
+                </span>
+                <span>
+                    <a href="#">Contacto</a>
+                </span>
+                <span>
+                    <a href="#">Servicios</a>
+                </span>
+            
+            </nav>
+        </div>
     </header>
     <main id="container_main">
-        <div>
+        <div id="articles">
             <article id="article 1">
                 <p>
 
@@ -60,13 +63,13 @@
         <aside id="sidebar">
             <ul>
                 <li>
-                    LinkedIn
+                    <a href="#">LinkedIn</a>
                 </li>
                 <li>
-                    Twitter
+                    <a href="#">Twitter</a>
                 </li>
                 <li>
-                    Facebook
+                    <a href="#">Facebook</a>
                 </li>
             </ul>
         </aside>
