--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 
 <body>
     <header id="header_container">
-        <div>
+        <div id="titulo">
+            <img src="./img/logo.png" alt="milogo">
             <h1>Mi primer pagina con flexbox</h1>
         </div>
-        <div><nav id="menu">
-            
+        <div id="menu">
+            <nav>
                 <span>
                     <a href="#">Inicio</a>
                 </span>
@@ -25,7 +26,9 @@
                 <span>
                     <a href="#">Servicios</a>
                 </span>
-            
+                <span>
+                    <a href="#">Galeria</a>
+                </span>
             </nav>
         </div>
     </header>
@@ -60,15 +63,15 @@
                 </p>
             </article>
         </div>
-        <aside id="sidebar">
+        <aside>
             <ul>
-                <li>
+                <li id="sidemenu">
                     <a href="#">LinkedIn</a>
                 </li>
-                <li>
+                <li id="sidemenu">
                     <a href="#">Twitter</a>
                 </li>
-                <li>
+                <li id="sidemenu">
                     <a href="#">Facebook</a>
                 </li>
             </ul>
