--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
         <div id="menu">
             <nav>
                 <span>
-                    <a href="#">Inicio</a>
+                    <a id="menulink" href="#">Inicio</a>
                 </span>
                 <span>
-                    <a href="#">Contacto</a>
+                    <a id="menulink"href="#">Contacto</a>
                 </span>
                 <span>
-                    <a href="#">Servicios</a>
+                    <a id="menulink" href="#">Servicios</a>
                 </span>
                 <span>
-                    <a href="#">Galeria</a>
+                    <a id="menulink" href="https://lorem.space/">Galeria</a>
                 </span>
             </nav>
         </div>
@@ -64,15 +64,24 @@
             </article>
         </div>
         <aside>
+            <section>
+                <form id="register"> 
+                    <label for="Name"> Usuario: </label>
+                    <input type="text" name="Nombre">
+                    <label for="Name"> Contraseña: </label>
+                    <input type="password" name="Contraseña">
+                    <input type="submit" value="Entrar">
+                </form>
+            </section>
             <ul>
                 <li id="sidemenu">
-                    <a href="#">LinkedIn</a>
+                    <a id="menulink" href="#">LinkedIn</a>
                 </li>
                 <li id="sidemenu">
-                    <a href="#">Twitter</a>
+                    <a id="menulink" href="#">Twitter</a>
                 </li>
                 <li id="sidemenu">
-                    <a href="#">Facebook</a>
+                    <a id="menulink" href="#">Facebook</a>
                 </li>
             </ul>
         </aside>
